chore: Remove planning docs from repo, add to .gitignore
Planning docs are internal working files, not needed in public repo:
- PHASE1-UPDATE.md
- PHASE2-PLAN.md

Updated .gitignore to exclude all *-PLAN.md and *-UPDATE.md files.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ working-buffer.md
 
 # WAL logs - local only
 memory/WAL-*.log
+
+# Planning and internal docs - keep local only
+PHASE1-UPDATE.md
+PHASE2-PLAN.md
+*-PLAN.md
+*-UPDATE.md
